--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: '3'
 services:
+  
+    
   vault:
     build:
       context: ./vault
@@ -13,11 +15,11 @@ services:
       - ./vault/logs:/vault/logs
     environment:
       - VAULT_ADDR=http://127.0.0.1:8200
-    command: server -config=/vault/config/vault-config.json
     cap_add:
       - IPC_LOCK
     depends_on:
       - consul
+      - db
     networks:
     - mynetwork
 
@@ -34,21 +36,6 @@ services:
     networks:
     - mynetwork
 
-  app:
-    image: node:alpine
-    volumes:
-      - ./:/app
-    working_dir: /app
-    depends_on:
-      - db
-    environment:
-      NODE_ENV: development
-    ports:
-      - 3000:3000
-    command: npm start
-    networks:
-    - mynetwork
-
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
@@ -60,6 +47,22 @@ services:
       - MYSQL_PASSWORD=webmailpasswd
     networks:
     - mynetwork
+  # app:
+  #   image: node:alpine
+  #   volumes:
+  #     - ./:/app
+  #   working_dir: /app
+  #   depends_on:
+  #     - db
+  #   environment:
+  #     NODE_ENV: development
+  #   ports:
+  #     - 3000:3000
+  #   command: npm start
+  #   networks:
+  #   - mynetwork
+
+
 
 networks:
   mynetwork:
