--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server.js"
+    "start": "node ./client.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,8 @@
     "express": "^4.16.4",
     "google-protobuf": "^3.0.0",
     "grpc": "^1.11.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "mysql": "^2.16.0",
+    "node-vault": "^0.9.5"
   }
 }
