--- a/ServiceTwo/package.json
+++ b/ServiceTwo/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./client.js"
+    "start": "node ./ServiceOne/server1.js && node ./ServiceOne/client1.js"
   },
   "author": "",
   "license": "ISC",
