--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
     image: node:alpine
     volumes:
       - ./ServiceOne:/app
-      - ./proto:/proto
+      - ./grpc:/app/grpc
       - ./certs:/certs
     working_dir: /app
     depends_on:
